backend page fixed

--- a/src/main/ngapp/src/app/app.component.html
+++ b/src/main/ngapp/src/app/app.component.html
@@ -292,7 +292,7 @@
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
   <img src="assets/logo.png" width="40">
-  <span>FMT backend server</span>
+  <span>FMT Reversi Server</span>
   <div class="spacer"></div>
 </div>
 
